<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shuffle_all"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_music"
        android:shortcutShortLabel="@string/shortcut_shuffle_short"
        android:shortcutLongLabel="@string/shortcut_shuffle_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aurora.music"
            android:targetClass="com.aurora.music.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="favourites"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_music"
        android:shortcutShortLabel="@string/shortcut_favourites_short"
        android:shortcutLongLabel="@string/shortcut_favourites_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aurora.music"
            android:targetClass="com.aurora.music.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_music"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aurora.music"
            android:targetClass="com.aurora.music.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="library"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_music"
        android:shortcutShortLabel="@string/shortcut_library_short"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aurora.music"
            android:targetClass="com.aurora.music.MainActivity" />
    </shortcut>
</shortcuts>
